# psdoom-ng

./: AUTHORS.old.psdoom-ng.repository  ChangeLog.psdoom-ng  Makefile.am  README.md  configure.ac  psd.in
.github/workflows/: c-cpp.yml
codeblocks/: config.h  game-res.rc  setup-res.rc
data/: Makefile.am
man/: Makefile.am
msvc/: config.h
src/: Makefile.am
src/doom/: d_main.c  doomstat.h  g_game.c  p_mobj.c  p_setup.c  r_things.c
